# span

./: .clang-tidy  CMakeLists.txt  GNUmakefile
include/tcb/: span.hpp
test/: CMakeLists.txt  test_span.cpp
